cambios en links

--- a/calificacion.html
+++ b/calificacion.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Historias Varias</title>
+    <title>Calificación</title>
 </head>
 
 <body>
@@ -55,7 +55,7 @@
         <h3>Historia recomendada por el autor:</h3>
         <strong>Mi Vida con Fufú.</strong>
         <p>Si deseas leer esta historia por favor, sigue el siguiente link.</p>
-        <a href="cap2.html">Leer</a>
+        <a href="otraHistoria.html">Leer</a>
     </aside>
     <hr>
     <address>
