--- a/inicio.html
+++ b/inicio.html
@@ -42,7 +42,7 @@
         <summary>¿Deseas comenzar una buena historia?</summary>
         <p> Presiona aquí para continuar</p>
         <ul>
-            <li><a href="cap2.html">Esta es la respuesta correcta</a></li>
+            <li><a href="otraHistoria.html">Esta es la respuesta correcta</a></li>
         </ul>
     </details><br>
     <hr>
