--- a/negro.html
+++ b/negro.html
@@ -43,7 +43,7 @@
         <ul>
             <li><a href="calificacion.html">Ya quiero terminar esto</a></li>
             <li><a href="inicio.html">Este no</a></li>
-            <li><a href="cap2.html">Este sí</a></li>
+            <li><a href="otraHistoria.html">Este sí</a></li>
         </ul>
     </details><br>
     <hr>
@@ -51,7 +51,7 @@
         <h3>Historia recomendada por el autor:</h3>
         <strong>Mi Vida con Fufú.</strong>
         <p>Si deseas leer esta historia por favor, sigue el siguiente link.</p>
-        <a href="cap2.html">Leer</a>
+        <a href="otraHistoria.html">Leer</a>
     </aside>
     <hr>
     <address>
