--- a/mate.html
+++ b/mate.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Historias Varias</title>
+    <title>Fallo Matemático</title>
 </head>
 
 <body>
@@ -40,7 +40,7 @@
         <ul>
             <li><a href="calificacion.html">Ya quiero terminar esto</a></li>
             <li><a href="mate2.html">36</a></li>
-            <li><a href="cap2.html">15</a></li>
+            <li><a href="otraHistoria.html">15</a></li>
         </ul>
     </details><br>
     <hr>
@@ -48,7 +48,7 @@
         <h3>Historia recomendada por el autor:</h3>
         <strong>Mi Vida con Fufú.</strong>
         <p>Si deseas leer esta historia por favor, sigue el siguiente link.</p>
-        <a href="cap2.html">Leer</a>
+        <a href="otraHistoria.html">Leer</a>
     </aside>
     <hr>
     <address>
