--- a/otraHistoria.html
+++ b/otraHistoria.html
@@ -40,7 +40,7 @@
         <p> Se pondrá muy interesante y emotiva...</p>
         <ul>
             <li><a href="calificacion.html">No, lo siento no me interesa.</a></li>
-            <li><a href="otraHistoria.html">QUIERO COMENZAR A LEER YA</a></li>
+            <li><a href="cap2.html">QUIERO COMENZAR A LEER YA</a></li>
         </ul>
     </details><br>
     <hr>
