--- a/negro.html
+++ b/negro.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Primer día juntas</title>
+    <title>Darks</title>
 </head>
 
 <body>
@@ -21,12 +21,12 @@
     </header>
     <article>
         <h3>Lamento decepcionarte y no me gusta para nada el negro</h3>
-        <p>Lo siento, has elegido la opción incorrecta, deberás de volver a elegir 
+        <p>Lo siento, has elegido la opción incorrecta, deberás de volver a elegir
             la respuesta & espero que esta vez sea la correcta.
         </p>
         <p>Deberás de volver a intentarlo. </p>
-        <img src="http://www.crear-meme.com/public/img/memes_users/darks-1.jpg"
-            alt="misión fallida" height="350" width="350">
+        <img src="http://www.crear-meme.com/public/img/memes_users/darks-1.jpg" alt="misión fallida" height="350"
+            width="350">
         <p>Te recomiendo una de estas</p>
     </article>
     <hr>
@@ -37,13 +37,11 @@
         <progress value="0" max="100"></progress>
     </article><br>
     <details>
-        <summary>Debes de resolver el siguiente acertijo para continuar...</summary>
-        <p> 3 + 3 * 3 + 3
-        </p>
+        <summary>Debes de elegir la opción correcta para continuar</summary>
         <ul>
             <li><a href="calificacion.html">Ya quiero terminar esto</a></li>
             <li><a href="inicio.html">Este no</a></li>
-            <li><a href="otraHistoria.html">Este sí</a></li>
+            <li><a href="cap2.html">Este sí</a></li>
         </ul>
     </details><br>
     <hr>
