--- a/cap5.html
+++ b/cap5.html
@@ -32,41 +32,59 @@
             ¿por qué hacerle tanto
             daño a un pequeño angel que literal no puede hablar? <b>¿Por qué hay tanta maldad en el mundo?</b>
         </p>
-        <p>José pasó por mi muy temprano en la mañana, la pequeña fu todavía iba en su caja 
+        <p>José pasó por mi muy temprano en la mañana, la pequeña fu venía muy tranquila en su cajita. Al verme, pude
+            darme cuenta
+            que sacó su linda cabecita para ver a donde estaba. Se notaba intranquila pero feliz también era un
+            sentimiento
+            muy extraño, pues me daba miedo el resultado que podría llegar a tener pero estaba segura que iba a estar
+            bien.
+            Pues, había sobrevivido a la primera noche. Tenía que estar bien, tenía que estar bien.
         </p>
     </article>
     <article>
-        <h4>Llegada a casa</h4>
-        <p>Llegamos a casa, los padres de mi novio nos esperaban ansiosos en la puerta, en la casa ellos tenían 3
-            perritos:
-            La Gupi (ahora un pequeño angelito), Strudell y Tati. La Gupi se le acercó a la pequeña, quería saber quien
-            era la nueva
-            bebé que estábamos llevando a casa... la pequeña se echo sobre ella y Gupi no se asustó me dió la impresión
-            que le dijo
-            "tranquila, todo estará bien".
+        <h4>Llegada al veterinario</h4>
+        <p>Llegamos al consultorio, tenía poca energía pero estaba inquieta viendo todo a su alrededor. Habían otros
+            perritos,
+            unos mucho más grandes y otros muy pequeñitos. La pequeña estaba feliz porque estaba acostada en mi regazo
+            haciendo
+            pequeñas muecas. Estaba muy contenta porque había tomado su suero y había comido un poquito por la mañana.
         </p>
-        <p>Cuando me preguntaron cual era su nombre.. sin pensarlo dije <b>Fufú, su nombre es Fufú</b> Entonces el
+        <p>Cuando estábamos esperando, una señora muy simpática, tenía lentes y vestía casual un sábado por la mañana al
+            lado
+            de su perro que tenía el mismo semblante que la dueña; tenían muchas ganas de platicar. Noté su interés por
+            la pequeña
+            Fu, no dejaban de verla y no dejaban de llamar su atención. Así que decidí platicar con ella, la saludé y
+            automáticamente me preguntó
+        </p>
+        <p>cual era su nombre.. sin pensarlo dije <b>Fufú, su nombre es Fufú</b> Entonces el
             automáticamente comenzó a
             llamarla por
             "<b>Fufú</b>"
         </p>
-        <p>Esa noche decidimos ir a comprar su comida, gracias a la donación de una compañera de Rotaract.
-            Fuimos hasta el Pais de liberación porque era el único que estaba abierto hasta esas horas de la noche.
-            <time>00:00</time> hrs y nosotros seguíamos buscando todo aqueo que necesitaba la pequeña para estar bien.
+        <p>Su lindo perrito, el cuál no recuerdo el nombre, tenía un sin fin de problemas médicos (me atrevo a decir
+            que igual que su dueña) tenía un informe taaaaan grande que era más enorme que el mío y digamos que yo
+            estuve
+            9 años de mi vida yendo constantemente al hospital por alguna enfermedad respiratoria. Me preguntó como la
+            encontramos,
+            que raza era o que si me la habían regalado. Me di cuenta lo importante que es un perro de "raza" decimos no
+            ser racistas pero si nos ponen a escoger entre un <b>Pug</b> a un <b>Chimuelo</b> y preferimos al <b>Pug</b>
+            mil veces.
+        </p>
+        <p>Sin darnos cuenta que lo más importante que existe en el mundo es el amor, la compañía y la atención
+            incodicional que un peludo nos puede brindar.
         </p>
     </article>
     <hr>
     <article>
-        <h4>Progreso de la historia hasta el momento. Ha completado el 30 %</h4>
+        <h4>Progreso de la historia hasta el momento. Ha completado el 40 %</h4>
         <h5>Felicidades, has encontrado el hilo correcto de la historia.</h5>
-        <progress value="30" max="100"></progress>
+        <progress value="40" max="100"></progress>
     </article><br>
     <details>
-        <summary>¿Cuál es la respuesta correcta?</summary>
-        <p> ¿Crees que fufú sobrevivió su primera noche?</p>
+        <summary>¿Quiéres continuar?</summary>
         <ul>
-            <li><a href="calificacion.html">No, creo que se murió mientras estaban en el súper</a></li>
-            <li><a href="cap5.html">Si, pienso que sobrevivió su primera noche</a></li>
+            <li><a href="calificacion.html">No :)</a></li>
+            <li><a href="cap6.html">Si :3</a></li>
         </ul>
     </details><br>
     <hr>
